Attempt to use jakarta.activation 1.2.1
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>